# raytracing-gpu

./: .gitignore
cpu/: Makefile  colors.c  light.c  ray.c  raytracer.c  stack.c
cpu/headers/: colors.h  hit.h  light.h  printer.h  raytracer.h  vector3.h
gpu/: CMakeLists.txt  bench.cpp  bench.cu  colors.cpp  colors.cu  hit.cpp  hit.cu  light.cpp  light.cu  parse_obj.cpp  parser.cpp  printer.cpp  ray.cu  raytracer.cpp  raytracer.cu  rt.cpp  scene.cu  stack.cpp  test.cu  thread_arg.cpp  vector3-extern.cpp  vector3-extern.cu  vector3.cpp  vector3.cu
gpu/headers/: colors.h  hit.h  light.h  parse_obj.h  parser.h  ray.h  raytracer.h  scene.h  stack.h  thread_arg.h  vector3.h
gpu/partitioning/: aabb.cu  aabb.h  octree.cu  octree.h  prefix_sum.cu  prefix_sum.h  sort.h  sort.tuh  utils.cu  utils.h
raytracer/: Makefile  hit.c  parse_obj.c  parser.c  vector3-extern.c
raytracer/headers/: ray.h  scene.h  stack.h  thread_arg.h
tests/: car-on-road.svati
